Fix edit article on mobile

--- a/assets/css/wikipedia.css
+++ b/assets/css/wikipedia.css
@@ -382,6 +382,10 @@ aside i {
     .col-20 { width: 100%; }
     .col-60 { width: 100%; }
 
+    main {
+        margin-top: 3em;
+    }
+
     main h1 {
         font-size: 3em;
         word-wrap: break-word;
